--- a/index.html
+++ b/index.html
@@ -279,11 +279,11 @@
      <a href="https://www.instagram.com/playstation/"> <img src="assets/images/insta.png" width="42" height="42" style="vertical-align:middle"></a><br><br>
      <a href="https://twitter.com/playstationin?lang=en"> <img src="assets/images/twitt.png"  width="42" height="42" style="vertical-align:middle"></a>
     </div>
-    <div style="background-color: rgb(242,242,242);opacity:0.8;width:650px;height: 130px; width: 100%;">
-      <p style="text-align: center;font-family:Cabin Sketch,cursive;font-weight: 1000;font-size: 4px;color: white;"><br> Made with <i class="fas fa-heart beat"></i> by <span><a href="https://www.linkedin.com/in/rutuj-runwal/" style="text-decoration: none;color: white;">Rutuj Runwal</a></span></p>
-      </div>
   </div>
 </div>
+<div style="background-color: rgb(242,242,242);opacity:0.8;width:650px;height: 130px; width: 100%;">
+      <p style="text-align: center;font-family:Cabin Sketch,cursive;font-weight: 1000;font-size:10px"><br> Made with <i class="fas fa-heart beat"></i> by <span><a href="https://www.linkedin.com/in/rutuj-runwal/" style="text-decoration: none;color: black;">Rutuj Runwal</a></span></p>
+      </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script
